--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.19",
+    "@types/react": "^19.0.12",
+    "@types/supertest": "^2.0.16",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^7.0.1",
@@ -40,10 +42,9 @@
     "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.3",
-    "supertest": "^6.3.3",
-    "@types/supertest": "^2.0.16"
+    "typescript": "^5.3.3"
   }
 }
